Thu Jul 05 12:21:48 BST 2007  Olly Betts <olly@survex.com>

	* docs/categorisation.rst: Complete half sentence.

Thu Jul 05 12:17:20 BST 2007  Olly Betts <olly@survex.com>

	* docs/categorisation.rst: Add section on restricting by category
	  values.

Thu Jul 05 04:47:18 BST 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/categorisation.rst: Add topic document
	  discussing use of Xapian::MatchSpy.

Thu Jul 05 02:08:13 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian.h,tests/api_wrdb.cc: Restore MatchSpy stuff.

Thu Jul 05 01:38:38 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Note that RoadMap on the wiki needs updating for each
	  release.

Thu Jul 05 01:03:05 BST 2007  Olly Betts <olly@survex.com>

	* AUTHORS: Update.

Thu Jul 05 00:31:00 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Minor tweaks and clarifications.

Thu Jul 05 00:29:53 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian.h,tests/api_wrdb.cc: Disable MatchSpy class for 1.0.2
	  as it's not ready for release yet.

Wed Jul 04 21:20:59 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Update with release date for release 1.0.2

Wed Jul 04 21:09:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Add Tomek Jackowiak, for reporting bug #166 (missing
	  Xapian::Query documentation).

Wed Jul 04 20:45:56 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Updated version and library version for 1.0.2.

Wed Jul 04 20:36:07 BST 2007  Olly Betts <olly@survex.com>

	* api/matchspy.cc,include/xapian/matchspy.h,tests/api_wrdb.cc:
	  Tidy up API for MatchSpy::build_numeric_ranges() and add tests.

Wed Jul 04 19:40:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Fully updated.

Wed Jul 04 18:33:59 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Move some of the changelog entries into news-style comments.

Wed Jul 04 17:50:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>
