@@ -1,3 +1,8 @@
+Thu Jul 05 20:41:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* tests/api_wrdb.cc: Rework matchspy2 to use approximate values to
+	  avoid failing on some platform due to differing precision.
+
 Thu Jul 05 12:21:48 BST 2007  Olly Betts <olly@survex.com>
 
 	* docs/categorisation.rst: Complete half sentence.
